fix about page alignment

--- a/src/app/HomePage.css
+++ b/src/app/HomePage.css
@@ -682,7 +682,7 @@ body {
     top: 0vh !important;
     z-index: 0;
   }
-
+ 
   .tag-line-text {
     font-size: 40px;
   }
@@ -725,6 +725,7 @@ body {
 
   .products-description {
     font-size: 16px;
+    font-family: "DM Sans", sans-serif;
   }
 
   .contact-form-info-text {
